--- a/.github/DEPLOY_SURGE.yml
+++ b/.github/DEPLOY_SURGE.yml
@@ -30,5 +30,5 @@ jobs:
       - name: Install surge
       - run: npm install -g surge
       - name: deploy on surge
-      - run: surge ./ BC-CLASS-1-MHK.surge.sh --token ${{secret.surge_token}}
+      - run: surge ./ BC-CLASS-1-MHK.surge.sh --token ${{secret.SURGE_TOKEN}}
       
