--- a/.github/DEPLOY_SURGE.yml
+++ b/.github/DEPLOY_SURGE.yml
@@ -23,12 +23,12 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Install nide JS
+      - name: Install node JS
       - uses: actions/setup-node@v2-beta
         with:
           node-version: 12 
       - name: Install surge
       - run: npm install -g surge
       - name: deploy on surge
-      - run: surge ./ BC-CLASS-1-MHK.surge.sh --token ${{secret.SURGE_TOKEN}}
+      - run: surge ./ bc-class-1-mhk.surge.sh --token ${{secret.SURGE_TOKEN}}
       
