--- a/.github/DEPLOY_SURGE.yml
+++ b/.github/DEPLOY_SURGE.yml
@@ -6,9 +6,8 @@ name: CI
 # events but only for the main branch
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches: [ MASTER ]
+
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -24,7 +23,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Install node JS
-      - uses: actions/setup-node@v2-beta
+        uses: actions/setup-node@v2-beta
         with:
           node-version: 12 
       - name: Install surge
