--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,10 @@
+
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: Deploy website
 
 # Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the main branch
+# events but only for the master branch
 on:
   push:
     branches: [ master ]
@@ -18,16 +19,15 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: Install node JS
-        uses: actions/setup-node@v2-beta
-        with:
-          node-version: 12 
-      - name: Install surge
-      - run: npm install -g surge
-      - name: deploy on surgee
-      - run: surge ./ bc-class-1-mhk.surge.sh --token ${{secret.SURGE_TOKEN}}
-      
+    # Runs a single command using the runners shell
+    - name: Install Nodejs
+      uses: actions/setup-node@v2-beta
+      with:
+        node-version: 12
+    - name: Install surge
+      run:  npm install -g surge
+    - name: Run surge
+      run:  surge ./ bc-class-1-mhk.surge.sh --token ${{secrets.surge_token}}
